Fix VariableHunt XP and exit logic based on report

--- a/frontend/src/components/Games/MiniGamePage/MiniGamePage.css
+++ b/frontend/src/components/Games/MiniGamePage/MiniGamePage.css
@@ -188,6 +188,11 @@
 	font-size: 1rem;
 }
 
+.code-block {
+  user-select: none; 
+  -webkit-user-select: none;
+}
+
 @keyframes fadeInDown {
 	from {
 		opacity: 0;
